# Institutional-Tide

./: README.md  pyproject.toml
fixtures/: etf_flows.json  global.json  quotes.json
output/: strategy.md  strategy.yaml
src/: __init__.py  __main__.py  backtest.py  classifier.py  emitter.py  models.py  momentum.py
src/fixtures/: __init__.py  loader.py
tests/: conftest.py  test_backtest.py  test_classifier.py  test_cli.py  test_emitter.py  test_fixture_loader.py  test_integration.py  test_momentum.py
