[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "institutional-tide"
version = "0.1.0"
description = "CMC Skill: institutional flow momentum strategy generator"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
institutional_tide = "src"
